Table on mobile device cutoff resolved
Resolved issue where the table was cutoff on the left side on mobile
devices.

--- a/BabySafeRx/css/stylesheet.css
+++ b/BabySafeRx/css/stylesheet.css
@@ -493,7 +493,7 @@ table
         {
             margin-bottom: 10px;
             display: block;
-            overflow: hidden;
+            /*overflow: hidden;*/
         }
 
         table td
